--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: './personal-website/package-lock.json'
+        cache-dependency-path: './personal-website'
     - run: npm ci
     - run: npm run build
     - run: npm run export
