Revert "Update node.js.yml"
This reverts commit 2ddacf269f14ef1c5e3700b2efca80fa4e5dec2d.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,14 +20,13 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - run: cd ..
-    - run: cd .\personal-website\
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: './personal-website'
     - run: npm ci
     - run: npm run build
     - run: npm run export
